# r1-sdk

./: .gitignore  AP_REBOOT_MANAGER.md  BACKLOG.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RUCKUS_ONE_API_DOCUMENTATION.md  SWITCH_ADDITION_EXAMPLES.md  ap_cli_manager.py  ap_reboot_manager.py  ap_support_logs.py  commandlist.csv  import_l3acl_csv.py  pyproject.toml  setup.py  test_ap_logs.py  test_identity_integration.py  test_l3acl.py  testing.md  wlan_info.py
data/: MS-endpoints.csv  MS-endpointsv2.csv
docs/: common-patterns.md  non-spec-endpoints.md  sdk-plan.md  switch-implementation-plan.md  testing.md
docs/modules/: aps.md  certificate_templates.md  cli_templates.md  dpsk.md  external_identities.md  identities.md  identity_groups.md  l3_acl_policies.md  mac_registration_pools.md  policy_sets.md  policy_templates.md  radius_attribute_groups.md  radius_server_profiles.md  switch_profiles.md  switches.md  venues.md  vlan_pools.md  wifi_networks.md
examples/: basic_usage.py
openapi-specs/: MANIFEST.md
r1_sdk/: __init__.py  auth.py  client.py  exceptions.py
r1_sdk/cli/: __init__.py  interactive.py  main.py
r1_sdk/modules/: __init__.py  access_points.py  aps.py  certificate_templates.py  cli_templates.py  dpsk.py  external_identities.py  identities.py  identity_groups.py  l3_acl_policies.py  l3acl.py  mac_registration_pools.py  policy_sets.py  policy_templates.py  radius_attribute_groups.py  radius_server_profiles.py  switch_profiles.py  switches.py  venues.py  (+4 more)
reference-code/: ruckus_companion_api.py
ruckus_one/: auth.py  client.py
test_modules/: test_identities.py  test_identity_groups.py
tests/: conftest.py
(+31 files in other folders)
